<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include
        layout="@layout/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    </include>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="30dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/menu"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textColor="@color/myColorPrimary"
                android:layout_marginBottom="20dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/when_a_category_is_selected"
                android:textColor="@color/myColorAccent"
                android:textSize="18sp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/returns_to_the_corresponding_tab_of_the_home_screen_for_the_main_categories"
                android:textSize="18sp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/it_opens_a_new_window_for_the_other_categories"
                android:textSize="18sp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/toolbar"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textColor="@color/myColorPrimary"
                android:layout_marginTop="40dp"
                android:layout_marginBottom="20dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/search_help_activity"
                android:textSize="18sp"
                android:textColor="@color/myColorAccent"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/you_must_have_selected_one_term_and_at_least_one_category_the_search_result_is_displayed_in_a_new_window"
                android:textSize="18sp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/notification"
                android:textSize="18sp"
                android:textColor="@color/myColorAccent"
                android:layout_marginTop="10dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/notification_is_sent_daily_if_one_or_more_articles_have_been_published_in_the_last_24_hours_you_must_have_selected_one_term_and_at_least_one_category"
                android:textSize="18sp"/>

        </LinearLayout>

    </ScrollView>

</LinearLayout>