<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_marginEnd="@dimen/categories_width">
            <CheckBox
                android:id="@+id/checkbox_arts"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/arts"
                android:onClick="checkCheckBox"
                android:padding="15dp" />
            <CheckBox
                android:id="@+id/checkbox_business"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/business"
                android:onClick="checkCheckBox"
                android:padding="15dp"/>
            <CheckBox
                android:id="@+id/checkbox_entrepreneurs"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/entrepreneurs"
                android:onClick="checkCheckBox"
                android:padding="15dp"/>
        </LinearLayout>


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <CheckBox
                android:id="@+id/checkbox_politics"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/politics"
                android:onClick="checkCheckBox"
                android:padding="15dp" />
            <CheckBox
                android:id="@+id/checkbox_sports"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sports"
                android:onClick="checkCheckBox"
                android:padding="15dp"/>
            <CheckBox
                android:id="@+id/checkbox_travel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/travel"
                android:onClick="checkCheckBox"
                android:padding="15dp"/>
        </LinearLayout>

</LinearLayout>