<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:padding="10dp">

    <ImageView
        android:layout_width="56dp"
        android:layout_height="56dp"
        android:src="@drawable/ic_launcher_background"
        android:id="@+id/img_article"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginStart="5dp">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/article_sectionSubsection"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sectionSubsection"
                android:textColor="@android:color/black"
                android:textStyle="bold" />


            <TextView
                android:id="@+id/article_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:text="@string/date"
                android:textColor="@android:color/black" />

        </FrameLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/article_title"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/article_title" />
        </LinearLayout>

    </LinearLayout>

</LinearLayout>
